# hillmapper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bktree.cpp  profile.json  pyproject.toml  setup.py  table_mapper.ipynb  tpcds_schema.sql  utils.py
.github/workflows/: build.yml
hillmapper/: __init__.py
src/: CMakeLists.txt  hillmapper.cpp
