[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build", "cmake", "pybind11", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hillmapper"
version = "0.1.1"
description = "Hillmapper C++ extension"
readme = "README.md"
authors = [
    { name = "Skander Krid", email = "kridskander@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]
